--- a/foundation/foundation.html
+++ b/foundation/foundation.html
@@ -6,6 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title> Login Design Using Foundation Design </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../assets/materialDesign.ico">
     <link rel="stylesheet" type="text/css" href="foundation.css">
     <link rel="stylesheet" type="text/css" href="../autocomplete.css">
     <link href="https://fonts.googleapis.com/css?family=Arima+Madurai" rel="stylesheet">
