--- a/bootstrap/bootstrap.html
+++ b/bootstrap/bootstrap.html
@@ -19,39 +19,39 @@
 </head>
 
 <body style="height: 100vh;">
-  <div class="container h-100">
+  <div class="container h-100" style="padding:10px">
     <div class="row h-100 justify-content-center align-items-center">
-      <div class="col-md-4 col-sm-12">
-        <div class="card">
+      <div class="col-md-6 col-sm-12">
+        <div class="card" >
           <div class="card-body">
             <form class="h-100">
               <div class="mb-3">
                 <label class="form-label">Nombre</label>
-                <input type="text" class="form-control" aria-describedby="emailHelp">
+                <input type="text" class="form-control" required>
               </div>
               <div class="mb-3">
                 <label class="form-label">Correo Electrónico</label>
-                <input type="email" class="form-control" id="exampleInputPassword1">
+                <input type="email" class="form-control" required>
               </div>
               <div class="mb-3">
                 <label class="form-label">Celular</label>
-                <input type="text" class="form-control" id="exampleInputPassword1">
+                <input type="text" class="form-control" required>
               </div>
               <div class="mb-3">
                 <label class="form-label">Fecha Nacimiento</label>
-                <input type="date" class="form-control">
+                <input type="date" class="form-control" required>
               </div>
               <div class="mb-3">
                 <label class="form-label">Pais</label>
-                <input id="myInput" type="text" name="pais" class="form-control" id="exampleInputPassword1">
+                <input id="myInput" type="text" name="pais" class="form-control" required>
               </div>
               <div class="mb-3">
                 <label for="formFileSm" class="form-label">Fotos</label>
-                <input class="form-control form-control-sm" id="formFileSm" type="file">
+                <input class="form-control form-control-sm" type="file">
               </div>
               <div class="mb-3">
                 <label for="formFileSm" class="form-label">Videos</label>
-                <input class="form-control form-control-sm" id="formFileSm" type="file">
+                <input class="form-control form-control-sm" type="file">
               </div>
               <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
