with file-foto-video

--- a/foundation/foundation.html
+++ b/foundation/foundation.html
@@ -40,8 +40,19 @@
                                     <input id="myInput" type="text" name="pais" placeholder="Country" required>
                                 </div>
                                 <div class="large-12 medium-12 cell">
+                                    <label for="foto">Foto</label>
+                                    <input type="file" name="foto" placeholder="Foto" required>
+                                </div>
+                                <div class="large-12 medium-12 cell">
+                                    <label for="video">Video</label>
+                                    <input type="file" name="video" placeholder="Video" required>
+                                </div>
+                                <div class="large-6 medium-12 cell">
                                     <input class="button primery login-btn" type="submit" value="Submit">
                                     <!-- <a type="submit" class="button primary login-btn" href="#">Submit</a> -->
+                                </div>
+                                <div class="large-6 medium-12 cell">
+                                    <a href="../index.html" class="button primary login-btn" href="#">Back</a>
                                 </div>
                             </div>
                         </form>
