--- a/index.html
+++ b/index.html
@@ -1,5 +1,27 @@
-<!-- nombre,
-correo electrónico,
-celular,
-fecha de nacimiento.
-Pais -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="index.css">
+    <title>Práctica#3</title>
+</head>
+
+<body id="body">
+    <div class="container">
+        <a href="./bootstrap/bootstrap.html" class="button"><span>✓</span>Bootstrap</a>
+        <a href="./foundation/foundation.html" class="button orange"><span>✓</span>Foundation</a>
+        <a href="#" class="button purple"><span>✓</span>Look I'm a button</a>
+        <a href="#" class="button turquoise"><span>✓</span>Look I'm a button</a>
+        <a href="#" class="button red"><span>✓</span>Look I'm a button</a>
+    </div>
+
+    <div class="copyright">
+        Created by <strong>Grupo 18 - SC</strong>
+    </div>
+</body>
+
+</html>
