--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 </head>
 
 <body id="body">
+    <h1>
+        PRÁCTICO#3 TECNOLOGÍA WEB
+        <strong>
+            GRUPO 18/SC
+        </strong>
+    </h1>
     <div class="container">
         <a href="./bootstrap/bootstrap.html" class="button"><span>✓</span>Bootstrap</a>
+        <br>
         <a href="./foundation/foundation.html" class="button orange"><span>✓</span>Foundation</a>
-        <a href="#" class="button purple"><span>✓</span>Look I'm a button</a>
-        <a href="#" class="button turquoise"><span>✓</span>Look I'm a button</a>
-        <a href="#" class="button red"><span>✓</span>Look I'm a button</a>
+        <br>
+        <a href="./materialDesign/materialDesign.html" class="button purple"><span>✓</span>Material Design</a>
     </div>
 
     <div class="copyright">
