--- a/materialDesign/materialDesign.html
+++ b/materialDesign/materialDesign.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Material Design </title>
+    <link rel="shortcut icon" href="../assets/materialDesign.ico" type="image/x-icon">
+    <title>Material Design</title>
     <!-- Importo el framework de CSS -->
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
@@ -19,9 +19,9 @@
 <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
 
 
-<body  style="padding:2% ; background-image: url('https://steamuserimages-a.akamaihd.net/ugc/1000306331958684055/EEBA1F028C5E4C09A4094A4989533C1ADF1FFFF9/'); 
+<body style="padding:2% ; background-image: url('https://steamuserimages-a.akamaihd.net/ugc/1000306331958684055/EEBA1F028C5E4C09A4094A4989533C1ADF1FFFF9/'); 
 object-fit: cover;">
-    <div class="container white " style="padding:2% ; border-radius: 20px ;" >
+    <div class="container white " style="padding:2% ; border-radius: 20px ;">
         <div class="row">
             <form class="col s12">
                 <div class="row">
@@ -76,28 +76,25 @@ object-fit: cover;">
                 </div>
                 <div class="row">
                     <div class="input-field col s6">
-
                         <input id="date" type="file" class="validate">
-                    
                     </div>
                     <div class="input-field col s6">
-
                         <input id="date" type="file" class="validate">
-                    
                     </div>
                 </div>
                 <div class="row ">
                     <div class="input-field col s6">
 
-                    <div class="autocomplete large-12 medium-12 cell">
-                        <label for="date">Fecha de nacimiento</label>
-                        <input id="myInput" type="text" name="pais" placeholder="Country" required>
-                    </div>
+                        <div class="autocomplete large-12 medium-12 cell">
+                            <label for="date">Fecha de nacimiento</label>
+                            <input id="myInput" type="text" name="pais" placeholder="Country" required>
+                        </div>
                     </div>
                 </div>
                 <button class="btn waves-effect waves-light" type="submit" name="action">Submit
                     <i class="material-icons right">send</i>
-                  </button>
+                </button>
+                <a href="../index.html" class="btn waves-effect waves-light" style="background-color: gray;">Back</a>
             </form>
         </div>
     </div>
