Añadidos fondos a bootstrap y grilla expandido el cover de material

--- a/bootstrap/bootstrap.html
+++ b/bootstrap/bootstrap.html
@@ -18,7 +18,10 @@
 
 </head>
 
-<body style="height: 100vh;">
+<body style="height: 100vh; 
+background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20201104/pngtree-technology-background-binary-computer-code-vector-design-image_458702.jpg'); 
+background-size:auto ;
+object-fit: cover;">
   <div class="container h-100" style="padding:10px">
     <div class="row h-100 justify-content-center align-items-center">
       <div class="col-md-6 col-sm-12">
@@ -33,14 +36,18 @@
                 <label class="form-label">Correo Electrónico</label>
                 <input type="email" class="form-control" required>
               </div>
-              <div class="mb-3">
+              <div class="row">
+
+             
+              <div class="mb-3 col-6">
                 <label class="form-label">Celular</label>
                 <input type="text" class="form-control" required>
               </div>
-              <div class="mb-3">
+              <div class="mb-3 col-6">
                 <label class="form-label">Fecha Nacimiento</label>
                 <input type="date" class="form-control" required>
               </div>
+            </div>
               <div class="mb-3">
                 <label class="form-label">Pais</label>
                 <input id="myInput" type="text" name="pais" class="form-control" required>
