--- a/bootstrap/bootstrap.html
+++ b/bootstrap/bootstrap.html
@@ -12,10 +12,11 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="../autocomplete.css">
+  <link rel="icon" href="../assets/bootstrap.ico" style="width: 32px; height: 32px;">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
-
 </head>
 
 <body style="height: 100vh; 
@@ -25,7 +26,7 @@ object-fit: cover;">
   <div class="container h-100" style="padding:10px">
     <div class="row h-100 justify-content-center align-items-center">
       <div class="col-md-6 col-sm-12">
-        <div class="card" >
+        <div class="card">
           <div class="card-body">
             <form class="h-100">
               <div class="mb-3">
@@ -37,28 +38,26 @@ object-fit: cover;">
                 <input type="email" class="form-control" required>
               </div>
               <div class="row">
-
-             
-              <div class="mb-3 col-6">
-                <label class="form-label">Celular</label>
-                <input type="text" class="form-control" required>
+                <div class="mb-3 col-6">
+                  <label class="form-label">Celular</label>
+                  <input type="text" class="form-control" required>
+                </div>
+                <div class="mb-3 col-6">
+                  <label class="form-label">Fecha Nacimiento</label>
+                  <input type="date" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                  <label for="formFileSm" class="form-label">Fotos</label>
+                  <input class="form-control form-control-sm" type="file">
+                </div>
+                <div class="mb-3">
+                  <label for="formFileSm" class="form-label">Videos</label>
+                  <input class="form-control form-control-sm" type="file">
+                </div>
               </div>
-              <div class="mb-3 col-6">
-                <label class="form-label">Fecha Nacimiento</label>
-                <input type="date" class="form-control" required>
-              </div>
-            </div>
               <div class="mb-3">
                 <label class="form-label">Pais</label>
                 <input id="myInput" type="text" name="pais" class="form-control" required>
-              </div>
-              <div class="mb-3">
-                <label for="formFileSm" class="form-label">Fotos</label>
-                <input class="form-control form-control-sm" type="file">
-              </div>
-              <div class="mb-3">
-                <label for="formFileSm" class="form-label">Videos</label>
-                <input class="form-control form-control-sm" type="file">
               </div>
               <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
@@ -70,4 +69,5 @@ object-fit: cover;">
 
   <script src="../autocomplete.js"></script>
 </body>
+
 </html>
