--- a/bootstrap/bootstrap.html
+++ b/bootstrap/bootstrap.html
@@ -60,6 +60,8 @@ object-fit: cover;">
                 <input id="myInput" type="text" name="pais" class="form-control" required>
               </div>
               <button type="submit" class="btn btn-primary">Enviar</button>
+              <a href="../index.html" class="btn btn-primary">Back</a>
+              <!-- <button type="submit" class="btn btn-primary">Enviar</button> -->
             </form>
           </div>
         </div>
