--- a/materialDesign/materialDesign.html
+++ b/materialDesign/materialDesign.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/materialDesign.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../autocomplete.css">
     <title>Material Design</title>
     <!-- Importo el framework de CSS -->
     <!-- Compiled and minified CSS -->
