--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
     <title>test</title>
   </head>
   <body>
-    <h1 style="transform: translateX(10px)">
+    <h1>
       PRÁCTICO#3 TECNOLOGÍA WEB
       <strong> GRUPO 18/SC </strong>
     </h1>
@@ -40,7 +40,7 @@
         >Material Design</a
       >
     </div>
-    <div id="students" class="students" style="transform: translateY(-50%)">
+    <div id="students" class="students">
       <!-- students profile photo -->
     </div>
     <script src="js/background.js"></script>
